tests/snapshots/examples_fixtures/guide__print.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/print.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
