tests/snapshots/examples_fixtures/guide__rebinding_with_let.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/rebinding_with_let.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
