tests/snapshots/examples_fixtures/guide__record_patterns.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/record_patterns.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
