tests/snapshots/examples_fixtures/guide__record_punning.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/record_punning.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
