tests/snapshots/examples_fixtures/guide__records.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
