tests/snapshots/examples_fixtures/guide__safe_arithmetic.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/safe_arithmetic.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
