tests/snapshots/examples_fixtures/guide__semicolons.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/semicolons.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
