tests/snapshots/examples_fixtures/guide__shapes_records.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/shapes_records.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
