tests/snapshots/examples_fixtures/guide__simple_option.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/simple_option.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
