tests/snapshots/examples_fixtures/guide__sort_by_string_len.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/sort_by_string_len.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
