tests/snapshots/examples_fixtures/guide__stdlib_os_pipelines.snap
---
source: tests/examples/examples_fixtures_snapshots.rs
---
Fixture: examples/guide/stdlib_os_pipelines.flx
== compile ==
ok
== diagnostics ==
<none>
== stdout ==
<not executed>
